# wukong

./: .gitignore  LICENSE  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml
.cursor/commands/: run.md
.cursor/rules/: learn.mdc
.github/workflows/: deploy-landing.yml
apps/landing/: next.config.ts  package.json
apps/landing/src/app/: globals.css  layout.tsx  page.tsx
wukong/: .env.example  README.md  README.zh-CN.md  pyproject.toml
wukong/scripts/: test_mcp_e2e.py  test_mcp_http_e2e.py
wukong/src/wukong/: __init__.py  __main__.py
wukong/src/wukong/cli/: __init__.py  parser.py
wukong/src/wukong/cli/commands/: __init__.py  session.py
wukong/src/wukong/cli/ui/: __init__.py  console.py
wukong/src/wukong/core/agent/: __init__.py  config.py  loop.py
wukong/src/wukong/core/config/: __init__.py  settings.py
wukong/src/wukong/core/context/: __init__.py  base.py  registry.py
wukong/src/wukong/core/context/providers/: __init__.py  file.py
wukong/src/wukong/core/llm/: __init__.py  base.py  router.py  schema.py
wukong/src/wukong/core/llm/adapters/: __init__.py  mock.py  openai.py
wukong/src/wukong/core/mcp/: __init__.py  client.py  config.py  manager.py  tool.py
wukong/src/wukong/core/prompt/: __init__.py  builder.py
wukong/src/wukong/core/prompt/templates/: tools.md
wukong/src/wukong/core/prompt/templates/base/: claude.md  default.md  openai.md
wukong/src/wukong/core/prompt/templates/modes/: agent.md  ask.md  plan.md
wukong/src/wukong/core/sandbox/: __init__.py  base.py  docker_sandbox.py  local_sandbox.py  manager.py  models.py  risk.py
wukong/src/wukong/core/session/: __init__.py  history.py  manager.py  models.py  storage.py
wukong/src/wukong/core/tools/: __init__.py  base.py  registry.py
wukong/src/wukong/core/tools/builtins/: __init__.py  bash.py  bash.txt  batch.py  batch.txt  glob.py  grep.py  grep.txt  list_dir.py  list_dir.txt  read_file.py  read_file.txt  task.py  task.txt  write_file.py  write_file.txt
wukong/src/wukong/core/utils/: __init__.py  id.py
wukong/tests/: __init__.py  test_agent_loop_context.py  test_agent_loop_tools.py  test_bash_sandbox_integration.py  test_bash_tool.py  test_batch_tool.py  test_chat_history.py  test_context_registry.py  test_docker_sandbox.py  test_file_provider.py  test_llm.py  test_local_sandbox.py  test_mcp.py  test_mention_parser.py  test_prompt_batch_guidance.py  test_prompt_builder.py  test_risk_analyzer.py  test_sandbox_manager.py  test_session_manager.py  test_task_tool.py
